server/chart/db/istio-gateway-crd/templates/gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: db
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "pulsar-web.cluster.com"
      - "pulsar-proxy.cluster.com"
      - "rabbitmq.cluster.com"
