server/chart/db/istio-gateway-crd/templates/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq
  namespace: db
spec:
  hosts:
    - "rabbitmq.cluster.com"
  gateways:
    - gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: rabbitmq
        port:
          number: 15672
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pulsar-web
  namespace: db
spec:
  hosts:
    - "pulsar-web.cluster.com"
  gateways:
    - gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: pulsar-manager
        port:
          number: 9527
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pulsar-proxy
  namespace: db
spec:
  hosts:
    - "pulsar-proxy.cluster.com"
  gateways:
    - gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: pulsar-proxy
        port:
          number: 80
